redpanda/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redpanda-console
  namespace: redpanda
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: redpanda-redpanda-redirect-slash@kubernetescrd,redpanda-redpanda-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: k3s.local
      http:
        paths:
          - path: /redpanda
            pathType: Prefix
            backend:
              service:
                name: redpanda-console
                port:
                  number: 8080
